feat(Master Access): Allow fetching of all users/clients from master realm
BREAKING CHANGE: To enable this feature set env var `KC_AUD_GLOBAL_MASTER_ACCESS` to `true`